--- a/style.css
+++ b/style.css
@@ -91,11 +91,22 @@ body {
 }
 
 /* Page content box */
-.content {
+.content{
   max-width: 800px;
-  margin: 40px auto;
-  padding: 20px;
+  margin: 10px auto;
+  padding: 30px;
   background: white;
   border-radius: 8px;
   box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+}
+
+.content > .naslov {
+  max-height: 60px;
+  max-width: 150px;
+  margin: 8px auto;
+  padding: 5px;
+  background: white;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+  text-align: center;
 }
